--- a/biodata.html
+++ b/biodata.html
@@ -8,19 +8,19 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- s -->
-    <title>Aknyai belajar</title>
+    <title>Aknyai belajarvdfdf</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Navbdfdfar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Homedfdf</a>
             <a class="nav-link" href="#">About</a>
             <a class="nav-link" href="#">Project</a>
             <a class="nav-link" href="#">Contact</a>
