--- a/index.html
+++ b/index.html
@@ -4,140 +4,158 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <!-- My CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <!-- s -->
-    <title>Aknyai belajar</title>
   </head>
-  <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-light fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Sumanto Lesmana</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Project</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
-          </div>
+          </li>
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Kategori</button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
+
+  <!-- Button -->
+  <!-- Button -->
+
+  <!-- Card -->
+  <section class="card">
+    <div class="container">
+      <div class="row text-center">
+        <h1 class="abaoutme">About Me</h1>
+        <div class="col mb-4">
+          <img src="turudek.jpg" class="rounded-circle" alt="gambar" width="200" />
+          <h2>Sumanto Lesmana Putra</h2>
+          <p class="fs-6">Mahasiswa S1 Sistem Informasi</p>
         </div>
       </div>
-    </nav>
-    <!-- Akhir Navbar -->
-
-    <!-- Jambotron -->
-    <section class="jumbotron text-center mb-4">
-      <div class="text-center">
-        <img src="turudek.jpg" class="rounded-circle" alt="gambar" width="200" />
-      </div>
-      <h1 class="display-4">Sumanto Lesmana Putra</h1>
-      <p class="lead">Mahasiswa salah ambil jurusan</p>
-      <hr class="my-4" />
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#a2d9ff"
-          fill-opacity="1"
-          d="M0,160L30,144C60,128,120,96,180,122.7C240,149,300,235,360,250.7C420,267,480,213,540,186.7C600,160,660,160,720,149.3C780,139,840,117,900,106.7C960,96,1020,96,1080,96C1140,96,1200,96,1260,117.3C1320,139,1380,181,1410,202.7L1440,224L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
-    <!-- Jambotron Akhir -->
-
-    <!-- Aboutme -->
-    <section id="about">
-      <div class="container">
-        <div class="row text-center mb-4">
-          <div class="col">
-            <h2>About Me</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-3 text-center">
-          <div class="col">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos quibusdam nostrum enim quis, doloremque debitis.</p>
-          </div>
-          <div class="col">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet esse illum, minus et neque laborum totam reiciendis eum necessitatibus amet!</p>
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#FFFFFF" fill-opacity="1" d="M0,160L0,288L288,288L288,128L576,128L576,160L864,160L864,160L1152,160L1152,320L1440,320L1440,320L1152,320L1152,320L864,320L864,320L576,320L576,320L288,320L288,320L0,320L0,320Z"></path>
-      </svg>
-    </section>
-    <!-- Akhir Aboutme -->
-
-    <!-- Project -->
-    <section class="project">
-      <div class="container">
-        <div class="row text-center mb-4">
-          <div class="col">
-            <h2>My Project</h2>
-          </div>
-        </div>
-        <div class="row mb-4">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="turudek.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+      <div class="row mb-4">
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Sinergi tim hanya akan terwujud apabila terdapat kolaborasi antara keterampilan dan pengetahuan yang bervariasi. Alhasil, menyatukan orang dengan cara ini menginspirasi anggota tim untuk bekerja sama demi menyukseskan
+                proyek..
+              </p>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="turudek.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Beberapa proyek membutuhkan biaya yang lumayan signifikan bagi organisasi pelaksanaannya. Oleh karena itu, penting untuk mengendalikan pengeluaran. Di sinilah manajemen proyek berperan untuk mengurangi risiko pembengkakan
+                anggaran, DoCheckers
+              </p>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="turudek.jpg" class="card-img-top" alt="..." />
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="card">
+            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">Semua anggota tim memiliki kesempatan yang sama untuk memberikan kontribusi yang berarti bagi proyek. Hal ini hanya mungkin terwujud melalui perencanaan dan alokasi sumber daya yang cerdas.</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- Akhir Project -->
+    </div>
+  </section>
 
-    <!-- Contact -->
-    <section id="contact">
-      <div class="container">
-        <div class="row text-center mb-4">
-          <div class="col">
-            <h2>Contact</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-med-8">
-            <form>
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
-              </div>
-              <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
-              </div>
-              <div class="mb-3">
-                <label for="Masukan" class="form-label">Masukan</label>
-                <textarea class="form-control" id="Masukan" rows="3"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
+  <!-- Card -->
+
+  <!-- FOrm, button, modal -->
+  <section id="form">
+    <div class="container">
+      <div class="row text-center mb-4">
+        <div class="col">
+          <h2>Contact</h2>
         </div>
       </div>
-    </section>
-    <!-- Akhir Contatc -->
-  </body>
+      <div class="row justify-content-center">
+        <div class="col-med-8">
+          <form>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Nama Lengkap</label>
+              <input type="text" class="form-control" id="name" aria-describedby="name" />
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Email</label>
+              <input type="email" class="form-control" id="email" aria-describedby="email" />
+            </div>
+            <div class="mb-3">
+              <label for="Masukan" class="form-label">Masukan</label>
+              <textarea class="form-control" id="Masukan" rows="3"></textarea>
+            </div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Kirim</button>
+
+            <!-- Modal, Form -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Pesan</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">Masukkan anda akan dikirim</div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Send</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Form, Modal-->
+
+  <!-- Pagination -->
+  <nav aria-label="...">
+    <ul class="pagination mb-4">
+      <li class="page-item disabled">
+        <a class="page-link">Previous</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item active" aria-current="page">
+        <a class="page-link" href="#">2</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
+  <!-- Pagination -->
 </html>
