--- a/MODUL1 SUMANTO/index.html
+++ b/MODUL1 SUMANTO/index.html
@@ -50,7 +50,7 @@
       <div class="row text-center">
         <h1 class="abaoutme">About Me</h1>
         <div class="col mb-4">
-          <img src="turudek.jpg" class="rounded-circle" alt="gambar" width="200" />
+          <img src="image/turudek.jpg" class="rounded-circle" alt="gambar" width="200" />
           <h2>Sumanto Lesmana Putra</h2>
           <p class="fs-6">Mahasiswa S1 Sistem Informasi</p>
         </div>
@@ -58,7 +58,7 @@
       <div class="row mb-4">
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <img src="image/com1.jpeg" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">
                 Sinergi tim hanya akan terwujud apabila terdapat kolaborasi antara keterampilan dan pengetahuan yang bervariasi. Alhasil, menyatukan orang dengan cara ini menginspirasi anggota tim untuk bekerja sama demi menyukseskan
@@ -69,7 +69,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <img src="image/com2.jpeg"" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">
                 Beberapa proyek membutuhkan biaya yang lumayan signifikan bagi organisasi pelaksanaannya. Oleh karena itu, penting untuk mengendalikan pengeluaran. Di sinilah manajemen proyek berperan untuk mengurangi risiko pembengkakan
@@ -80,7 +80,7 @@
         </div>
         <div class="col-md-4 mb-3">
           <div class="card">
-            <img src="com1.jpeg" class="card-img-top" alt="..." />
+            <img src="image/com3.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-text">Semua anggota tim memiliki kesempatan yang sama untuk memberikan kontribusi yang berarti bagi proyek. Hal ini hanya mungkin terwujud melalui perencanaan dan alokasi sumber daya yang cerdas.</p>
             </div>
